--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_width="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:background="@color/vlight_blue"
+    android:padding="30dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp"
-        tools:ignore="MissingConstraints">
+<TextView
+    android:id="@+id/chooseNum"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:text="Witamy w aplikacji bankowej "
+    android:textColor="@color/vdark_blue"
+    android:textSize="20dp"
+    android:layout_marginTop="20dp"
+    android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Witamy w aplikacji bankowej" />
+<Button
+android:id="@+id/goBlikGenerator"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:backgroundTint="@color/light_blue"
+android:text="blik" />
 
-        <Button
-            android:id="@+id/goBlikGenerator"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="blik" />
-
+<TextView
+android:id="@+id/randomBlikCode"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
