--- a/app/src/main/res/layout/notification_layout.xml
+++ b/app/src/main/res/layout/notification_layout.xml
@@ -35,7 +35,7 @@
             android:layout_below="@id/title"
             android:layout_toRightOf="@id/app_logo"
             android:textSize="20sp"
-            android:title="@+id/message" />
+            android:id="@+id/message" />
 
     </RelativeLayout>
 </RelativeLayout>
